# AutomaticSegmentation

./: CMakeLists.txt  README.md  extract-large-airways.cxx
Core/: AirwaysMeasureFilter.h  AirwaysMeasureFilter.hxx  CMakeLists.txt  HessianAnalysisFilter.h  HessianAnalysisFilter.hxx
Utils/: CMakeLists.txt  agtkCommandLineArgumentParser.h
